<?xml version="1.0"?>
<package>
  <name>example_unav_gpio</name>
  <version>0.1.0</version>
  <description>The example_unav_gpio package</description>

  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>

  <license>MIT</license>

  <url type="website">http://rnext.it/project/unav</url>

  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>orbus_interface</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>orbus_interface</run_depend>
  <run_depend>roscpp</run_depend>

</package>
